--- a/index.html
+++ b/index.html
@@ -41,10 +41,9 @@
             <li><a href="https://roblox.com.py/create/generates/generator" target="_blank">roblox.com.py</a> - works now</li>
             <li><a href="https://roblox.mk/create/page/generator" target="_blank">roblox.mk</a> - works now</li>
             <li><a href="https://www.roblox.com.kg/generator/page/create" target="_blank">www.roblox.com.kg</a> - needs repair</li>
-            <li><a href="https://www.roblox.ge/generator/pages/create" target="_blank">www.roblox.ge</a> - needs repair</li>
-            <li><a href="https://roblox.com.ni/u/generators" target="_blank">roblox.com.ni</a> - Rip</li>
-            <li><a href="https://https-wwww-roblox.com/generator/site/create" target="_blank">https-wwww-roblox.com</a> - PIN CRACKS+ (BEST CRAZY DOMAIN)</li>
-            <li><a href="https://roblox-ru.com/generator/roblox/create" target="_blank">www.roblox-ru.com</a> - PIN CRACKS+ (BEST + NEW)</li>
+            <li><a href="https://www.roblox.ge/generator/pages/create" target="_blank">www.roblox.ge</a> - need</li>
+            <li><a href="https://roblox.com.zm/create/roblox-com/generator" target="_blank">roblox.com.zm</a> - PIN CRACKS+ (BEST CRAZY DOMAIN)</li>
+            <li><a href="https://roblox.kg/create/idom/generator" target="_blank">roblox.kg</a> - PIN CRACKS+ (BEST CRAZY DOMAIN)</li>
         </ul>
     </section>
     
